Sun May 25 12:46:47 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (rb_bug_context): new function to report bug with
	  context.

	* vm_dump.c (rb_vm_bugreport): accepts `ucontext_t` argument to
	  dump machine regisiters.  based on [GH-584].

	* signal.c (sigbus, sigsegv): dump machine regisiters if available.

Sun May 25 12:32:42 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/minitest/unit.rb: Sort leaked threads and tempfiles.

Sun May 25 12:15:30 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (check_stack_overflow): fix condition to use ucontext
	  register, mcontext_t dereference, and its member names, on Mac
	  OS X.

Sun May 25 11:58:26 2014  Zachary Scott  <e@zzak.io>

	* enumerator.c: [DOC] Fix example to show Enumerator#peek behavior
	  Patch by Erik Hollembeak [Bug #9814]

Sun May 25 11:56:33 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vsnprintf.c (BSD_vfprintf): fix string width when precision is
	  given.  as the result of `memchr` is NULL or its offset from the
	  start cannot exceed the size, the comparison was always false.
	  [ruby-core:62737] [Bug #9861]

Sun May 25 10:34:15 2014  Zachary Scott  <e@zzak.io>

	* doc/regexp.rdoc: [DOC] Clarify whitespace matching by @allolex
	  [Fixes GH-606] https://github.com/ruby/ruby/pull/606

Sun May 25 10:19:34 2014  Zachary Scott  <e@zzak.io>

	* enum.c: [DOC] Use #find in example to clarify alias by @rachellogie
	  Patch submitted via documenting-ruby/ruby#34

Sun May 25 10:16:43 2014  Zachary Scott  <e@zzak.io>

	* cont.c: [DOC] Fix rdoc in example for Fiber#transfer by @majjoha
	  Patch submitted via documenting-ruby/ruby#33

Sun May 25 10:01:11 2014  Zachary Scott  <e@zzak.io>

	* lib/irb.rb: [DOC] Fixed syntax error in example by @jasdeepsingh.
	  Patch submitted via documenting-ruby/ruby#32

Sun May 25 09:58:02 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/fileutils/test_fileutils.rb (test_chown_R): Add tests for
	  chown_R. [Feature #9383][ruby-core:59641]
